# artifacts/api-server/src/routes/index.ts
@@ -2,6 +2,8 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import clinicsRouter from "./clinics";
 import servicesRouter from "./services";
+import professionalsRouter from "./professionals";
+import patientsRouter from "./patients";
 import appointmentsRouter from "./appointments";
 import aiLogsRouter from "./ai-logs";
 import whatsappRouter from "./whatsapp";
@@ -11,6 +13,8 @@ const router: IRouter = Router();
 router.use(healthRouter);
 router.use(clinicsRouter);
 router.use(servicesRouter);
+router.use(professionalsRouter);
+router.use(patientsRouter);
 router.use(appointmentsRouter);
 router.use(aiLogsRouter);
 router.use(whatsappRouter);
